$Id: CHANGES,v 1.272 2005/03/02 08:46:54 stelian Exp $

Changes between versions 0.4b39 and 0.4b40 (released ????????????????)
======================================================================

1.	Changed restore to emit warnings (instead of emitting a fatal
	error) if a file (or a directory) is unavailable for a 
	comparision (if the user doesn't have the necessary permissions
	to access it for example). Thanks to Kenneth Porter
	<shiva@sewingwitch.com> for the bug report.

2.	Re-done the 'do not save directory entries to non-dumped inodes
	(excluded from dump)' feature. The previous implementation
	worked well for excluded directories but not for regular files.
	Thanks to Kenneth Porter <shiva@sewingwitch.com> for the bug
	report.

3.	Fixed a bug in dump where the tape size was miscalculated when
	the user used -d/-s to specify the tape characteristics. Thanks
	to Philip Goisman <goisman@physics.arizona.edu> for reporting
	the bug.

Changes between versions 0.4b38 and 0.4b39 (released January 21, 2005)
======================================================================

1.	The newly added dump_on_cd_3 example was buggy, replace it
	with an updated version from Andrew Basterfield
	<bob@cemetery.homeunix.org>.

2.	Made restore to chdir() back into the initial directory when
	dumping core while aborting a comparision operation. The
	previous behaviour was to write the corefile at the root of
	the directory being compared, which could very well be 
	read only and preventing the corefile generation. Thanks
	to Kenneth Porter <shiva@sewingwitch.com> for the bug report.

3.	Silenced the failure to call fgetflags() when comparing an
	entry which has no ext2 attributes (as in lsattr()).

4.	Fix a brown paper bug in restore -C which broke restore and
	caused modifications on the filesystem being compared
	(directories containing a file with the same name as the
	directory get renamed to RSTTMP...). Thanks to Kenneth Porter